<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFF8DC"
    tools:context=".MainActivity"
    >


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/title_text"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        />

        <EditText
            android:id="@+id/edit_operand1"
            android:inputType="numberDecimal"
            android:layout_marginTop="20dp"
            android:hint="@string/first_number"/>

    <EditText
        android:id="@+id/edit_operand2"
        android:inputType="numberDecimal"
        android:layout_marginTop="5dp"
        android:hint="@string/second_number"/>


    <TableRow
        android:background="#ffb4b855"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnPlus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btnPlus"
            android:textColor="#ff1b0880"
            android:textStyle="bold"
            android:onClick="processAddition"
            style="?android:attr/buttonStyleSmall"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btnSubtract"
            android:textStyle="bold"
            android:onClick="processSubtraction"
            style="?android:attr/buttonStyleSmall"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btnMultiply"
            android:textStyle="bold"
            android:onClick="processMultiplication"
            style="?android:attr/buttonStyleSmall"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btnDivide"
            android:textStyle="bold"
            android:onClick="processDivision"
            style="?android:attr/buttonStyleSmall"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnClear"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btnClear"
            android:textStyle="bold"
            android:onClick="clearFields"
            style="?android:attr/buttonStyleSmall"
            android:layout_weight="1" />


    </TableRow
        >


    <TextView
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/text_result"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text_result"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="25sp" />


</TableLayout>
